# dj-x-tmplt-crud-projects

./: pyproject.toml
