[tool.poetry]
name = "dj-x-tmplt-crud-projects"
version = "0.1.0"
description = ""
authors = ["MasonChance <mason.fryberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.11.2"
django-debug-toolbar = "^3.2"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
